# nekolibro

./: CMakeLists.txt  ProductDetails.ui  accountswindow.cpp  accountswindow.h  accountswindow.ui  categorieswindow.cpp  categorieswindow.h  categorieswindow.ui  createaccount.cpp  createaccount.h  createaccount.ui  csdl.drawio  database.cpp  database.h  details.cpp  details.ui  employeeswindow.cpp  employeeswindow.h  employeeswindow.ui  findproduct.cpp  findproduct.h  findproduct.ui  flashscreen.cpp  flashscreen.h  flashscreen.ui  galeries.qrc  imexport.cpp  imexport.h  imexport.ui  login.cpp  login.h  login.ui  main.cpp  nekolibro.cpp  nekolibro.db  nekolibro.h  nekolibro.ui  productdetails.cpp  productdetails.h  reports.cpp  (+15 more)
